<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ /**
  ~  * Created by Assaf Biton
  ~  */
  -->

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@color/Background_Lavender"
    tools:context="com.assafbt.projects.memorygame.SelectingImages"
    android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/select_title"
        android:id="@+id/textView"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />


    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/pic1"
        android:id="@+id/select1"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="65dp"
        android:background="@drawable/select_design" />


    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/pic2"
        android:id="@+id/select2"
        android:layout_below="@+id/select1"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:background="@drawable/select_design" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/pic3"
        android:id="@+id/select3"
        android:layout_below="@+id/select2"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:background="@drawable/select_design"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/pic4"
        android:id="@+id/select4"
        android:layout_below="@+id/select3"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:background="@drawable/select_design" />




    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/pic5"
        android:id="@+id/select5"
        android:layout_below="@+id/select4"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:background="@drawable/select_design"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/pic6"
        android:id="@+id/select6"
        android:layout_below="@+id/select5"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:background="@drawable/select_design"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/pic7"
        android:id="@+id/select7"
        android:layout_below="@+id/select6"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:background="@drawable/select_design"
        />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/pic8"
        android:id="@+id/select8"
        android:layout_below="@+id/select7"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:background="@drawable/select_design"/>

    <Button
        android:id="@+id/back_from_select_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/save_back_btn"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:background="@drawable/play_btn" />

    <!--
     <Button
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:id="@+id/BackBTN"
         android:text="BACK"
         android:layout_alignParentBottom="true"
         android:layout_centerHorizontal="true" />
 -->

</RelativeLayout>
