<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ /**
  ~  * Created by Assaf Biton
  ~  */
  -->

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@color/Background_light"
    tools:context="com.assafbt.projects.memorygame.MainActivity"
    android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/main_title1"
        android:id="@+id/MainTitle1"
        android:layout_marginTop="50dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/main_title2"
        android:id="@+id/MainTitle2"
        android:layout_below="@+id/MainTitle1"
        android:layout_centerHorizontal="true"/>
<!--

    <FrameLayout
        android:layout_height="match_parent"
        android:layout_width="match_parent"
        android:id="@+id/ScoreList"
        android:layout_alignParentBottom="true">
-->



    <!-- -->
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/score1"
        android:id="@+id/best1Title"
        android:layout_marginTop="42dp"
        android:layout_below="@+id/resetBTN"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

        <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="00:00:00"
        android:id="@+id/best2View"
        android:layout_marginTop="40dp"
        android:layout_below="@+id/best1View"
        android:layout_alignLeft="@+id/best1View"
        android:layout_alignStart="@+id/best1View" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/score2"
        android:id="@+id/best2Title"
        android:layout_alignTop="@+id/best2View"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />


        <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/score3"
        android:id="@+id/best3Title"
        android:layout_alignTop="@+id/best3View"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="00:00:00"
            android:id="@+id/best1View"
            android:layout_alignTop="@+id/best1Title"
            android:layout_centerHorizontal="true" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="00:00:00"
            android:id="@+id/best3View"
            android:layout_marginTop="25dp"
            android:layout_below="@+id/best2View"
            android:layout_alignLeft="@+id/best2View"
            android:layout_alignStart="@+id/best2View"
            />

<!--
    </FrameLayout>
-->

    <Button
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:id="@+id/infoBtn"
    android:text="@string/about_text"
    android:layout_alignParentBottom="true"
    android:background="@drawable/play_btn"
    android:layout_centerHorizontal="true"/>




    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/reset_imgs"
        android:id="@+id/resetIMG"
        android:background="@drawable/reset_btn"
        android:layout_centerVertical="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_toStartOf="@+id/best1View"
        android:layout_toLeftOf="@+id/best1View" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/spacebar"
        android:layout_toLeftOf="@+id/resetIMG"
        android:layout_toStartOf="@+id/resetIMG"
        android:layout_centerVertical="true"

        />


    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/reset_score"
        android:id="@+id/resetBTN"
        android:background="@drawable/reset_btn"
        android:layout_centerVertical="true"
        android:layout_toLeftOf="@+id/spacebar"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_toEndOf="@+id/best1View"
        android:layout_toRightOf="@+id/best1View" />



    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/select_imgs"
        android:id="@+id/selectBTN"
        android:background="@drawable/play_btn"
        android:layout_below="@+id/startBTN"
        android:layout_marginBottom="13dp"
        android:layout_centerHorizontal="true"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/play_game"
        android:id="@+id/startBTN"
        android:background="@drawable/play_btn"
        android:layout_below="@+id/MainTitle2"
        android:layout_marginTop="13dp"
        android:layout_centerHorizontal="true"/>


</RelativeLayout>
